--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,18 @@
   height: 300px !important;
 } */
 /* text in grey box */
-/* .MuiGridListTileBar-title{
+.MuiGridListTileBar-title{
+  white-space: normal !important;
+}
+
+
+
+/* makes grey box big */
+#show-instructions{
+  height: 300px !important;
+}
+/* text in grey box */
+/* #test{
   white-space: normal !important;
 } */
 
