--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,20 @@
   white-space: normal !important;
 } */
 
+/* 404 page  */
+body.four-o-four-page {
+  content: "";
+  background: url("https://i.imgur.com/O7Zfb6P.png") no-repeat fixed center;
+  background-size: cover;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: -1;  
+}
 
+/* Header */
 .meals-search-bar{
   margin-top:5%;
 }
@@ -23,12 +36,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -40,15 +47,4 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
