--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,12 @@
 
 /* Bon Apptit */
 #header-logo{
-  margin-left: 100px;
-  margin-right: 40%;
   font-family: Snell Roundhand, cursive;
+  color:black;
+  position: absolute !important;
+  /* padding-right:10% !important; */
+  margin-left:-30%;
+
 }
 
 .four-o-four-info{
